# spicy

./: .gitignore  index.html  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: chat.rs  files.rs  history.rs  mod.rs
src/components/: Chat.css  Chat.tsx  FileChange.css  FileChange.tsx  FileTabs.css  FileTabs.tsx  Message.css  Message.tsx  TitleBar.css  TitleBar.tsx
src/hooks/: useChat.ts
src/styles/: theme.css
