[package]
name = "spicy"
version = "0.1.0"
edition = "2021"

[lib]
name = "spicy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
thiserror = "2"
dotenvy = "0.15.7"
raw-window-handle = "0.6.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSValue"] }
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSColor", "NSView", "NSResponder"] }
